--- a/safety.html
+++ b/safety.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
+    <title data-i18n="webTitle">JoinMe | Meet New People</title>
+    <link rel="icon" href="images/icon16.png" type="image/png">
     <title data-i18n="safety.title">Safety Standards</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
@@ -30,24 +32,24 @@
             <img src="images/app-store.png" alt="Download on the App Store" class="store-badge"/>
         </a>
     </div>
-
+    <nav>
+        <a href="index.html" data-i18n="nav.home">Home</a>
+        <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
+        <a href="how.html" data-i18n="nav.how">Features</a>
+        <a href="safety.html" data-i18n="nav.safety">Safety</a>
+        <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
+        <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>
+        <a href="faq.html" data-i18n="nav.faq">FAQ</a>
+    </nav>
 </header>
 
-<nav>
-    <a href="index.html" data-i18n="nav.home">Home</a>
-    <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
-    <a href="how.html" data-i18n="nav.how">How it works</a>
-    <a href="safety.html" data-i18n="nav.safety">Safety</a>
-    <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
-    <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>
-    <a href="faq.html" data-i18n="nav.faq">FAQ</a>
-</nav>
-
+<div class="main-content">
 <main class="section">
     <h2 data-i18n="safety.title">Safety Standards</h2>
 
     <p data-i18n="safety.intro">
-        We are committed to keeping JoinMe a safe space for all users, especially protecting minors from abuse or exploitation.
+        We are committed to keeping JoinMe a safe space for all users, especially protecting minors from abuse or
+        exploitation.
     </p>
 
     <h3 data-i18n="safety.section1.title">1. Content Moderation</h3>
@@ -57,7 +59,8 @@
 
     <h3 data-i18n="safety.section2.title">2. Age Restrictions</h3>
     <p data-i18n="safety.section2.text">
-        JoinMe is intended for users 18 and older. We monitor reports of underage usage and remove accounts that violate this policy.
+        JoinMe is intended for users 18 and older. We monitor reports of underage usage and remove accounts that violate
+        this policy.
     </p>
 
     <h3 data-i18n="safety.section3.title">3. Reporting Tools</h3>
@@ -72,7 +75,8 @@
 
     <h3 data-i18n="safety.section5.title">5. Contact Information</h3>
     <p>
-        <span data-i18n="safety.section5.text">To report abuse, email us at</span>: <a href="mailto:support@join-me-app.com">support@join-me-app.com</a>
+        <span data-i18n="safety.section5.text">To report abuse, email us at</span>: <a
+            href="mailto:support@join-me-app.com">support@join-me-app.com</a>
     </p>
 </main>
 
@@ -82,6 +86,7 @@
     <a href="mailto:support@join-me-app.com" data-i18n="footer.contact">Contact</a>:
     <span class="support-email">support@join-me-app.com</span>
 </footer>
+</div>
 
 <script src="js/en.js"></script>
 <script src="js/de.js"></script>
