--- a/terms.html
+++ b/terms.html
@@ -1,57 +1,75 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>AGB – JoinMe</title>
+    <meta charset="UTF-8"/>
+    <title data-i18n="webTitle">JoinMe | Meet New People</title>
+    <link rel="icon" href="images/icon16.png" type="image/png">
+    <title>AGB – JoinMe</title>
 </head>
 <body>
 <h1>Allgemeine Geschäftsbedingungen (AGB)</h1>
 <p><strong>für die Nutzung der App JoinMe</strong></p>
 
 <h2>1. Geltungsbereich</h2>
-<p>Diese Allgemeinen Geschäftsbedingungen (AGB) gelten für die Nutzung der mobilen Applikation <strong>JoinMe</strong>, die von Yaser Selim mit Sitz in Brandenburg, Deutschland, betrieben wird. Bei Fragen kontaktieren Sie uns bitte per E-Mail unter support@join-me-app.com.</p>
+<p>Diese Allgemeinen Geschäftsbedingungen (AGB) gelten für die Nutzung der mobilen Applikation <strong>JoinMe</strong>,
+    die von Yaser Selim mit Sitz in Brandenburg, Deutschland, betrieben wird. Bei Fragen kontaktieren Sie uns bitte per
+    E-Mail unter support@join-me-app.com.</p>
 <h2>2. Registrierung und Nutzungsberechtigung</h2>
 <p>(1) Die Nutzung der App setzt eine vorherige Registrierung voraus.</p>
 <p>(2) Die Nutzung ist ausschließlich natürlichen Personen gestattet, die das 18. Lebensjahr vollendet haben.</p>
 <p>(3) Mit der Registrierung bestätigt der Nutzer, dass er volljährig ist.</p>
 
 <h2>3. Leistungen der App</h2>
-<p>(1) Die App bietet registrierten Nutzern die Möglichkeit, ein Profil zu erstellen, sich mit anderen Nutzern zu vernetzen, Nachrichten zu senden sowie Beiträge zu erstellen und Veranstaltungen zu kommentieren.</p>
+<p>(1) Die App bietet registrierten Nutzern die Möglichkeit, ein Profil zu erstellen, sich mit anderen Nutzern zu
+    vernetzen, Nachrichten zu senden sowie Beiträge zu erstellen und Veranstaltungen zu kommentieren.</p>
 <p>(2) Ziel der App ist es, reale Treffen zwischen Nutzern zu ermöglichen.</p>
 <p>(3) Die App dient ausschließlich zur privaten Nutzung.</p>
 
 <h2>4. Pflichten der Nutzer</h2>
 <p>(1) Die Nutzer sind verpflichtet, bei der Registrierung wahrheitsgemäße Angaben zu machen.</p>
-<p>(2) Die Nutzer verpflichten sich, keine Inhalte zu veröffentlichen, die gegen gesetzliche Vorschriften, Rechte Dritter oder die guten Sitten verstoßen.</p>
-<p>(3) Insbesondere untersagt sind beleidigende, diskriminierende, pornografische, gewaltverherrlichende oder rechtswidrige Inhalte.</p>
+<p>(2) Die Nutzer verpflichten sich, keine Inhalte zu veröffentlichen, die gegen gesetzliche Vorschriften, Rechte
+    Dritter oder die guten Sitten verstoßen.</p>
+<p>(3) Insbesondere untersagt sind beleidigende, diskriminierende, pornografische, gewaltverherrlichende oder
+    rechtswidrige Inhalte.</p>
 
 <h2>5. Inhalte der Nutzer und Verantwortlichkeit</h2>
-<p>(1) Die Nutzer sind für die von ihnen eingestellten Inhalte (z. B. Texte, Kommentare, Bilder) selbst verantwortlich.</p>
+<p>(1) Die Nutzer sind für die von ihnen eingestellten Inhalte (z. B. Texte, Kommentare, Bilder) selbst
+    verantwortlich.</p>
 <p>(2) Der Betreiber übernimmt keine Verantwortung für das Verhalten der Nutzer oder deren Inhalte.</p>
-<p>(3) Der Betreiber behält sich das Recht vor, Inhalte, die gegen diese AGB oder gesetzliche Bestimmungen verstoßen, zu löschen.</p>
+<p>(3) Der Betreiber behält sich das Recht vor, Inhalte, die gegen diese AGB oder gesetzliche Bestimmungen verstoßen, zu
+    löschen.</p>
 
 <h2>6. Treffen der Nutzer und Haftungsausschluss</h2>
-<p>(1) Die App dient als Plattform zur Anbahnung von Kontakten und Treffen zwischen Nutzern. Die Organisation und Durchführung solcher Treffen erfolgt ausschließlich in Eigenverantwortung der Nutzer.</p>
-<p>(2) Der Betreiber übernimmt keinerlei Haftung für das Verhalten, Handlungen oder Unterlassungen der Nutzer bei realen Treffen, die über die App zustande kommen.</p>
-<p>(3) Die Nutzer sind selbst dafür verantwortlich, die notwendigen Sicherheitsvorkehrungen bei einem persönlichen Treffen zu treffen (z. B. Treffpunkt, Kontaktperson informieren, erstes Treffen an öffentlichen Orten etc.).</p>
+<p>(1) Die App dient als Plattform zur Anbahnung von Kontakten und Treffen zwischen Nutzern. Die Organisation und
+    Durchführung solcher Treffen erfolgt ausschließlich in Eigenverantwortung der Nutzer.</p>
+<p>(2) Der Betreiber übernimmt keinerlei Haftung für das Verhalten, Handlungen oder Unterlassungen der Nutzer bei realen
+    Treffen, die über die App zustande kommen.</p>
+<p>(3) Die Nutzer sind selbst dafür verantwortlich, die notwendigen Sicherheitsvorkehrungen bei einem persönlichen
+    Treffen zu treffen (z. B. Treffpunkt, Kontaktperson informieren, erstes Treffen an öffentlichen Orten etc.).</p>
 
 <h2>7. Haftung im Übrigen</h2>
-<p>(1) Der Betreiber übernimmt keine Gewähr für die Richtigkeit, Vollständigkeit oder Aktualität der von Nutzern bereitgestellten Inhalte.</p>
-<p>(2) Eine Haftung für Schäden, die aus der Nutzung der App entstehen, ist ausgeschlossen, es sei denn, sie beruhen auf vorsätzlichem oder grob fahrlässigem Verhalten des Betreibers.</p>
+<p>(1) Der Betreiber übernimmt keine Gewähr für die Richtigkeit, Vollständigkeit oder Aktualität der von Nutzern
+    bereitgestellten Inhalte.</p>
+<p>(2) Eine Haftung für Schäden, die aus der Nutzung der App entstehen, ist ausgeschlossen, es sei denn, sie beruhen auf
+    vorsätzlichem oder grob fahrlässigem Verhalten des Betreibers.</p>
 
 <h2>8. Vertragslaufzeit und Kündigung</h2>
 <p>(1) Der Nutzungsvertrag wird auf unbestimmte Zeit geschlossen.</p>
 <p>(2) Nutzer können ihr Konto jederzeit ohne Angabe von Gründen löschen.</p>
-<p>(3) Der Betreiber kann das Nutzerkonto aus wichtigem Grund, insbesondere bei Verstößen gegen die AGB, jederzeit kündigen.</p>
+<p>(3) Der Betreiber kann das Nutzerkonto aus wichtigem Grund, insbesondere bei Verstößen gegen die AGB, jederzeit
+    kündigen.</p>
 
 <h2>9. Datenschutz</h2>
-<p>Informationen zur Verarbeitung personenbezogener Daten finden sich in unserer <a href="/datenschutzerklaerung.html">Datenschutzerklärung</a>.</p>
+<p>Informationen zur Verarbeitung personenbezogener Daten finden sich in unserer <a href="/datenschutzerklaerung.html">Datenschutzerklärung</a>.
+</p>
 
 <h2>10. Änderungen der AGB</h2>
-<p>Der Betreiber behält sich das Recht vor, diese AGB jederzeit zu ändern. Die Nutzer werden rechtzeitig über Änderungen informiert. Die weitere Nutzung der App gilt als Zustimmung zur Änderung.</p>
+<p>Der Betreiber behält sich das Recht vor, diese AGB jederzeit zu ändern. Die Nutzer werden rechtzeitig über Änderungen
+    informiert. Die weitere Nutzung der App gilt als Zustimmung zur Änderung.</p>
 
 <h2>11. Schlussbestimmungen</h2>
 <p>(1) Es gilt das Recht der Bundesrepublik Deutschland.</p>
-<p>(2) Sollten einzelne Bestimmungen dieser AGB unwirksam sein oder werden, bleibt die Wirksamkeit der übrigen Bestimmungen unberührt.</p>
+<p>(2) Sollten einzelne Bestimmungen dieser AGB unwirksam sein oder werden, bleibt die Wirksamkeit der übrigen
+    Bestimmungen unberührt.</p>
 </body>
 </html>
