--- a/documentation.html
+++ b/documentation.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
+    <title data-i18n="webTitle">JoinMe | Meet New People</title>
+        <link rel="icon" href="images/icon16.png" type="image/png">
+    <title data-i18n="webTitle">JoinMe | Meet New People</title>
+        <link rel="icon" href="images/icon16.png" type="image/png">
     <title>Why JoinMe</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
@@ -31,22 +35,23 @@
         </a>
     </div>
 
+    <nav>
+        <a href="index.html" data-i18n="nav.home">Home</a>
+        <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
+        <a href="how.html" data-i18n="nav.how">Features</a>
+        <a href="safety.html" data-i18n="nav.safety">Safety</a>
+        <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
+        <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
+        <a href="faq.html" data-i18n="nav.faq">FAQ</a>
+    </nav>
 </header>
 
-<nav>
-    <a href="index.html" data-i18n="nav.home">Home</a>
-    <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
-    <a href="how.html" data-i18n="nav.how">How it works</a>
-    <a href="safety.html" data-i18n="nav.safety">Safety</a>
-    <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
-    <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
-    <a href="faq.html" data-i18n="nav.faq">FAQ</a>
-</nav>
 <div class="section">
     <h2 id="delete-account">Delete Account</h2>
     <p>
         You can request to delete your JoinMe account and all associated personal data at any time.
-        To delete your account, please visit the <a href="/account-settings.html">Account Settings</a> page inside the app or contact our support team at
+        To delete your account, please visit the <a href="/account-settings.html">Account Settings</a> page inside the
+        app or contact our support team at
         <a href="mailto:support@join-me-app.com">support@join-me-app.com</a>.
     </p>
     <p>
