--- a/registration.html
+++ b/registration.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title data-i18n="registered.pageTitle">Registration Successful</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8"/>
+    <title data-i18n="webTitle">JoinMe | Meet New People</title>
+    <link rel="icon" href="images/icon16.png" type="image/png">
+    <title data-i18n="registered.pageTitle">Registration Successful</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
 <header>
-  <h1 data-i18n="title">JoinMe</h1>
-  <p data-i18n="subtitle">Meet new people in real life</p>
+    <h1 data-i18n="title">JoinMe</h1>
+    <p data-i18n="subtitle">Meet new people in real life</p>
 </header>
 
 <div class="section">
-  <h2 data-i18n="registered.title">You're all set!</h2>
-  <p data-i18n="registered.text">
-    🎉 Your registration was successful. You can now close this page and return to the JoinMe app to start using it.
-  </p>
+    <h2 data-i18n="registered.title">You're all set!</h2>
+    <p data-i18n="registered.text">
+        🎉 Your registration was successful. You can now close this page and return to the JoinMe app to start using it.
+    </p>
 </div>
 
 <script src="js/en.js"></script>
 <script src="js/de.js"></script>
 <script src="js/main.js"></script>
 <script>
-  const urlParams = new URLSearchParams(window.location.search);
-  const lang = urlParams.get('lang') || 'en';
-  setLang(lang);
+    const urlParams = new URLSearchParams(window.location.search);
+    const lang = urlParams.get('lang') || 'en';
+    setLang(lang);
 </script>
 </body>
 </html>
