Revert "agb start styling"
This reverts commit 1c8a27bd7fe9585cebae5fa07c76d5438e4722c5.

--- a/faq.html
+++ b/faq.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title data-i18n="webTitle">JoinMe | Meet New People</title>
-    <link rel="icon" href="images/icon16.png" type="image/png">
+    <meta charset="UTF-8" />
     <title>Why JoinMe</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -32,23 +30,22 @@
             <img src="images/app-store.png" alt="Download on the App Store" class="store-badge"/>
         </a>
     </div>
-    <nav>
-        <a href="index.html" data-i18n="nav.home">Home</a>
-        <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
-        <a href="how.html" data-i18n="nav.how">Features</a>
-        <a href="safety.html" data-i18n="nav.safety">Safety</a>
-        <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
-        <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
-        <a href="faq.html" data-i18n="nav.faq">FAQ</a>
-    </nav>
+
 </header>
 
-<div class="main-content">
+<nav>
+    <a href="index.html" data-i18n="nav.home">Home</a>
+    <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
+    <a href="how.html" data-i18n="nav.how">How it works</a>
+    <a href="safety.html" data-i18n="nav.safety">Safety</a>
+    <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
+    <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
+    <a href="faq.html" data-i18n="nav.faq">FAQ</a>
+</nav>
 <div class="section">
     <h2 data-i18n="why.title">Why JoinMe?</h2>
     <p data-i18n="why.text">
-        JoinMe gives you the easiest way to meet people who share your interests. Whether you are new in town, looking
-        for friends, or organizing events — JoinMe is the perfect place to start.
+        JoinMe gives you the easiest way to meet people who share your interests. Whether you are new in town, looking for friends, or organizing events — JoinMe is the perfect place to start.
     </p>
 </div>
 <footer>
@@ -57,7 +54,6 @@
     <a href="mailto:support@join-me-app.com" data-i18n="footer.contact">Contact</a>:
     <span class="support-email">support@join-me-app.com</span>
 </footer>
-</div>
 <script src="js/en.js"></script>
 <script src="js/de.js"></script>
 <script src="js/main.js"></script>
