--- a/why.html
+++ b/why.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title data-i18n="webTitle">JoinMe | Meet New People</title>
-    <link rel="icon" href="images/icon16.png" type="image/png">
+    <meta charset="UTF-8" />
     <title>Why JoinMe</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -33,95 +31,55 @@
         </a>
     </div>
 
-    <nav>
-        <a href="index.html" data-i18n="nav.home">Home</a>
-        <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
-        <a href="how.html" data-i18n="nav.how">Features</a>
-        <a href="safety.html" data-i18n="nav.safety">Safety</a>
-        <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
-        <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>
-        <a href="faq.html" data-i18n="nav.faq">FAQ</a>
-    </nav>
 </header>
-<div class="main-content">
-    <div class="section why-joinme">
-        <h2 data-i18n="why.title">Why JoinMe?</h2>
 
-        <div class="why-intro">
-            <p data-i18n="why.text1">
-                Sick of scrolling through endless short videos and the latest trends?
-                Ready to take a break from your screen and actually meet awesome people nearby?
-            </p>
-            <p data-i18n="why.text2">
-                Whether you’re new in town, tired of endless gaming marathons, or just craving fresh faces — JoinMe
-                helps
-                you connect, share, and make real-life memories.
-            </p>
-        </div>
+<nav>
+    <a href="index.html" data-i18n="nav.home">Home</a>
+    <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
+    <a href="how.html" data-i18n="nav.how">How it works</a>
+    <a href="safety.html" data-i18n="nav.safety">Safety</a>
+    <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
+    <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
+    <a href="faq.html" data-i18n="nav.faq">FAQ</a>
+</nav>
+<div class="section">
+    <h2 data-i18n="why.title">Why JoinMe?</h2>
+    <p data-i18n="why.text">
+        Sick of scrolling through endless cat videos and memes?
+        Ready to take a break from your screen and actually meet cool people nearby?
 
-        <!-- Key Benefits -->
-        <div class="benefits-grid">
-            <div class="benefit">
-                <span class="emoji">🤝</span>
-                <p data-i18n="why.benefit1">Find people who share your interests</p>
-            </div>
-            <div class="benefit">
-                <span class="emoji">📅</span>
-                <p data-i18n="why.benefit2">Join or create activities — spontaneous or planned</p>
-            </div>
-            <div class="benefit">
-                <span class="emoji">😊</span>
-                <p data-i18n="why.benefit3">Turn chats into real laughs and smiles</p>
-            </div>
-            <div class="benefit">
-                <span class="emoji">🌍</span>
-                <p data-i18n="why.benefit4">Explore your city through new eyes</p>
-            </div>
-        </div>
+        Whether you’re new in town, bored of gaming marathons, or just craving some fresh faces — JoinMe is your go-to app for real-life fun!
 
-        <!-- Activities -->
-        <section class="activities">
-            <h2 data-i18n="why.activitiesTitle">What Can You Do with JoinMe?</h2>
-            <p style="font-size: 1.1rem; color: #555; margin-bottom: 1rem;">
-            <span data-i18n="why.activitiesSubtitle">Unleash Your Imagination. Your world, your activities.
-            From quiet walks in the park to epic adventures or quirky hobbies,
-            you’re free to create activities you love — safely and legally.</span>
-                <b data-i18n="why.examples">Examples:</b>
-            </p>
+        Find friends who vibe with your interests
 
-            <div class="activities-grid">
-                <div class="activity-card" data-i18n="why.activity1">🌿 Go for a walk in the park and try to name the
-                    plants
-                    together
-                </div>
-                <div class="activity-card" data-i18n="why.activity2">🧗‍♀️ Discover local climbing gyms with other
-                    adventurers
-                </div>
-                <div class="activity-card" data-i18n="why.activity3">🎨 Join a street art or sketch walk with creative
-                    minds
-                </div>
-                <div class="activity-card" data-i18n="why.activity4">📚 Organize a chill coffee & book chat at your
-                    favorite
-                    café
-                </div>
-                <div class="activity-card" data-i18n="why.activity6">🚴‍♂️ Explore your city on a group bike ride</div>
-                <div class="activity-card" data-i18n="why.activity7">🎤 Find others who love karaoke and belt out some
-                    tunes
-                </div>
-            </div>
-            <p class="closing" data-i18n="why.end">The only limit is your imagination — go create memorable moments.</p>
-        </section>
-    </div>
+        Join or create local events and hangouts
 
-    <footer>
-        <a href="privacy-policy.html" target="_blank" data-i18n="footer.privacyLink">Privacy Policy</a>
-        <a href="terms.html" target="_blank" data-i18n="footer.termsLink">Terms</a>
-        <a href="mailto:support@join-me-app.com" data-i18n="footer.contact">Contact</a>:
-        <span class="support-email">support@join-me-app.com</span>
-    </footer>
+        Discover your city through new eyes (and new people!)
+
+        Turn those online chats into real smiles and high-fives
+
+        Life’s too short to just watch from the sidelines — jump in and start making memories today with JoinMe!
+    </p>
+    <section class="activities" style="padding: 2rem; background-color: #f9f9f9;">
+        <h2 style="font-size: 2rem; text-align: center; margin-bottom: 1rem;">What Can You Do with JoinMe?</h2>
+        <ul style="list-style: none; padding: 0; max-width: 600px; margin: 0 auto;">
+            <li style="padding: 0.5rem 0;">🌿 Go for a walk in the park and try to name the plants together</li>
+            <li style="padding: 0.5rem 0;">🧗‍♀️ Discover local climbing gyms with other adventurers</li>
+            <li style="padding: 0.5rem 0;">🎨 Join a street art or sketch walk with creative minds</li>
+            <li style="padding: 0.5rem 0;">📚 Organize a chill coffee & book chat at your favorite café</li>
+            <li style="padding: 0.5rem 0;">🎮 Start a casual game night — board games or Mario Kart, your pick!</li>
+            <li style="padding: 0.5rem 0;">🚴‍♂️ Explore your city on a group bike ride</li>
+            <li style="padding: 0.5rem 0;">🎤 Find others who love karaoke and belt out some tunes</li>
+            <li style="padding: 0.5rem 0;">🍕 Meet for a pizza picnic in the park — toppings debate included</li>
+        </ul>
+    </section>
 </div>
-
-<!-- translations -->
+<footer>
+    <a href="privacy-policy.html" target="_blank" data-i18n="footer.privacyLink">Privacy Policy</a>
+    <a href="terms.html" target="_blank" data-i18n="footer.termsLink">Terms</a>
+    <a href="mailto:support@join-me-app.com" data-i18n="footer.contact">Contact</a>:
+    <span class="support-email">support@join-me-app.com</span>
+</footer>
 <script src="js/en.js"></script>
 <script src="js/de.js"></script>
 <script src="js/main.js"></script>
