--- a/html/nav.html
+++ b/html/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <a href="index.html" data-i18n="nav.home">Home</a>
     <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
-    <a href="how.html" data-i18n="nav.how">Features</a>
+    <a href="how.html" data-i18n="nav.how">How it works</a>
     <a href="safety.html" data-i18n="nav.safety">Safety</a>
     <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
     <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
