--- a/screenshots.html
+++ b/screenshots.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="images/icon16.png" type="image/png">
     <title>Why JoinMe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css?v=1"/>
 </head>
 <body>
 
@@ -59,8 +59,8 @@
 </div>
 
 
-<script src="js/en.js"></script>
-<script src="js/de.js"></script>
-<script src="js/main.js"></script>
+<script src="js/en.js?v=1"></script>
+<script src="js/de.js?v=1"></script>
+<script src="js/main.js?v=1"></script>
 </body>
 </html>
