--- a/index.html
+++ b/index.html
@@ -37,14 +37,10 @@
         <a href="how.html" data-i18n="nav.how">Features</a>
         <a href="safety.html" data-i18n="nav.safety">Safety</a>
         <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
-        <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
+        <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>
         <a href="faq.html" data-i18n="nav.faq">FAQ</a>
-
     </nav>
-
 </header>
-
-
 
 
 <div class="main-content">
