--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,7 @@
 <div class="lang-menu">
     <select id="langSelector" onchange="setLang(this.value)">
-        <option value="en">🇬🇧 English</option>
-        <option value="de">🇩🇪 Deutsch</option>
+        <option value="en">🇬🇧 EN</option>
+        <option value="de">🇩🇪 DE</option>
     </select>
 </div>
 <h1 data-i18n="title">JoinMe</h1>
