--- a/safety.html
+++ b/safety.html
@@ -13,8 +13,8 @@
 <header>
     <div class="lang-menu">
         <select id="langSelector" onchange="setLang(this.value)">
-            <option value="en">🇬🇧 English</option>
-            <option value="de">🇩🇪 Deutsch</option>
+            <option value="en">🇬🇧 EN</option>
+            <option value="de">🇩🇪 DE</option>
         </select>
     </div>
 
