--- a/how.html
+++ b/how.html
@@ -44,12 +44,13 @@
 </header>
 
 <div class="main-content">
-    <div class="section">
+    <div class="section why-joinme">
         <h2 data-i18n="index.heading">How JoinMe Works</h2>
-        <p data-i18n="index.description">
-            JoinMe helps you meet new people in your area based on your interests.
-            Join activities, chat with members, and enjoy real-life meetups.
-        </p>
+       <div class="why-intro">
+           <p data-i18n="index.description" >
+               JoinMe helps you meet new people in your area — whether through your interests or simply your mood. Take part in spontaneous meetups or plan activities in advance, chat with members, and turn connections into real-life experiences.
+           </p>
+       </div>
 
         <div class="features">
             <div class="feature">
