--- a/index.html
+++ b/index.html
@@ -48,6 +48,39 @@
         <h1 data-i18n="title1">Real People</h1>
         <h1 data-i18n="title2">Real Moments</h1>
     </div>
+    <div style="display: flex; flex-direction: column; gap: 2rem; align-items: center; justify-content: center; padding: 20px">
+        <div class="hero-card">
+            <p data-i18n="index.heroP1">In a world glued to screens, real human interaction has never been more
+                important.</p>
+            <img src="images/image_1.png" alt="People interacting" class="hero-image">
+        </div>
+        <div class="hero-card">
+            <p>
+                <span class="app-name">JoinMe </span>
+                <span data-i18n="index.heroP2">is on a mission to turn technology into a bridge for meaningful, real-life connections.</span>
+            </p>
+            <img src="images/image_2.png" alt="People interacting" class="hero-image">
+        </div>
+        <div class="hero-card">
+            <p data-i18n="index.heroP3">
+                <span data-i18n="index.heroP3a">At</span> <span class="app-name">JoinMe</span> <span data-i18n="index.heroP3b">, it all starts with you — host activities or join inspiring ones around you. Like the idea? Download the app and dive in.</span>
+                        </p>
+            <div class="download-buttons">
+                <a href="https://apps.apple.com" target="_blank">
+                    <img src="images/app-store.png" alt="Download on the App Store">
+                </a>
+                <a href="https://play.google.com" target="_blank">
+                    <img src="images/google-play.png" alt="Get it on Google Play">
+                </a>
+            </div>
+        </div>
+
+        <div class="why-intro">
+            <p>You are the heart of JoinMe — start your own activities or discover and join the ones that inspire
+                ayou.</p>
+
+        </div>
+    </div>
     <footer>
         <a href="privacy-policy.html" target="_blank" data-i18n="footer.privacyLink">Privacy Policy</a>
         <a href="terms.html" target="_blank" data-i18n="footer.termsLink">Terms</a>
